turtleart.lessons.turtleart.Main.Polygon6.scala.error
Source:6: error: not found: value avane
		avane(60); droite(60) 
                ^