turtleart.lessons.turtleart.Main.Polygon6.scala.code
override def run() 
{
	for(i <- 1 to 6)
	{
		avane(60); droite(60) 
	}
}
